--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -9,17 +9,18 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="newportfolio.Client.styles.css" rel="stylesheet" />
+    <script src="_framework/blazor.webassembly.js"></script>
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+   
 </body>
 
 </html>
